[*] fix text-align property in print view mode

--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -227,7 +227,8 @@ section::before{
         text-transform: uppercase;
     }
 
-    .blocks>.padding-medium>h2{
+    .blocks>.padding-medium>h2,
+    .padding-medium{
         text-align: center;
     }
 
